新增 Survey 下游任务

--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -435,4 +435,17 @@ Voicebox \cite{NIPS2023Voicebox} is a non-autoregressive flow-matching model tra
 SALM \cite{Chen2024SALM} equipped with multitask and in-context learning capabilities. SALM achieving comparable performance to task-specific models through instruction tuning for ASR and AST. Additionally, a speech-supervised in-context training method is proposed to bridge the gap between LLM training and downstream speech tasks, further enhancing the in-context learning ability of speech-to-text models.
 Audio Flamingo \cite{kong2024audioflamingo} supports instruction tuning on interleaved audio-text pairs, thereby excelling in robust multi-turn dialogue capabilities. By incorporating in-context learning, it achieves quick adaptation to unseen tasks. The model attains state-of-the-art results on several close-ended and open-ended audio understanding tasks without the need for task-specific fine-tuning.
 
+### Audio-Language Agent Systems
+
+Agent Systems utilize LLMs as agents to transform human instructions, achieving task transfer in downstream tasks by cooperating different foundational pre-trained models, as shown in Fig. \ref{fig:agent system}. By leveraging the reasoning capabilities of LLMs, these agent systems are designed to invoke and collaborate with a diverse array of audio models and tools to accomplish complex tasks initiated by humans.
+
+SpeechAgents \cite{zhang2024speechagents} is a multi-modal, multi-agent system designed to simulate human communication. The agents collaborate in a distributed and parallel manner to formulate decisions and execute corresponding actions, significantly enhancing work efficiency and effectiveness. A Multi-Agent Tuning technique was proposed, allowing the system to handle complex, multi-party communications more effectively. Notably, the system shows excellent scalability, performing well even with up to 25 agents. This capability makes SpeechAgents particularly suitable for tasks such as drama creation and audio novel generation.
+MusicAgent \cite{yu2023musicagent} is a system designed to integrate and organize various music processing tasks. The method employed by MusicAgent consists of a comprehensive toolset for collecting music-related tools from diverse sources, and an autonomous workflow powered by LLMs that organizes these tools, decomposes user requests into multiple sub-tasks automatically, and invokes the appropriate music tools to fulfill these requirements.
+MusicAgent is capable of handling a wide range of music processing tasks and aims to bridge the gap between tools from different sources by unifying data formats (text, MIDI, ABC notation, audio), thereby enabling seamless collaboration among tools on different platforms.
+AudioGPT \cite{huang2024audiogpt} is an innovative multi-modal system that integrates ChatGPT with audio foundation models and input/output interfaces to process complex audio information and conduct spoken conversations. Its method involves four key stages: modality transformation, task analysis, model assignment, and response generation. AudioGPT demonstrates proficiency in various audio-related tasks, including speech processing, music analysis and generation, and sound effect understanding and creation.
+
+SpeechAgents \cite{zhang2024speechagents} is a multimodal and multi-agent system that proposes a multi-agent tuning technique. The agents collaborate in a distributed and parallel manner to make decisions and execute actions, thereby significantly improving work efficiency and effectiveness. With excellent scalability, SpeechAgents is particularly suitable for tasks such as drama creation and audio novel generation.
+MusicAgent \cite{yu2023musicagent} is a system designed to integrate and organize various music processing tasks. Driven by LLMs, it automatically decomposes user requests into multiple sub-tasks and invokes the appropriate music tools to fulfill these requirements. MusicAgent can handle a wide range of music processing tasks and aims to bridge the gap between tools from different sources by unifying data formats (text, MIDI, ABC notation, audio), enabling seamless collaboration among tools on different platforms.
+AudioGPT \cite{huang2024audiogpt} is an innovative multimodal system that integrates ChatGPT with audio foundation models and input/output interfaces to process complex audio information and conduct spoken conversations. AudioGPT demonstrates proficiency in various audio-related tasks, including speech processing, music analysis and generation, and sound effect understanding and creation.
+
 ## 6·Conclusions: 结论
