--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -468,4 +468,33 @@ Benchmarks can be categorized into three types: task-specific, cross-task, and a
 
 These benchmarks aim to improve model performance and ensure fair comparison across different scenarios. The baseline performances on these benchmarks reflect the progress of model research and help identify current limitations to guide future studies, thereby advancing the field of audio-language learning and developing more powerful models.
 
+## 7·Challenges and Future Directions
+
+In this section, we will analyze some challenges currently faced by ALM research and humbly share possible research directions.
+
+From a data perspective, there are three challenges and potential research directions.
+
+1) Audio Sources:
+The current audio-language datasets have limited sources of audio samples \cite{wijngaard2024ald_survey}, mainly including AudioSet \cite{gemmeke2017audioset}, FreeSound \cite{fonseca2017freesound}, and BBC Sound Effects \cite{bbc}. When using multiple audio-language datasets for model training, it is often limited due to the overlap of data sources, restricting the scaling up of model performance. In addition, the limited training data presents distribution shift issues \cite{chang2024context}, resulting in ALM lacking robustness and generalization ability when facing a variety of audio types and qualities. Compared with the data sources of LLM and VLM, the diversity of audio data is still limited \cite{raffel2020exploring}. We hope to develop methods for constructing online audio datasets to expand the nearly limitless scale of internet resources.
+
+2) Text Sources:
+Currently, audio-language datasets focus on generating audio captions from known labeled datasets or manual annotation, hindering the acquisition of larger-scale datasets. The evolution of LLMs encourages more researchers to create ALM-suitable datasets via model generation methods. Despite their powerful performance, generated text may still contain inaccuracies like hallucinations \cite{liu2024mminstruct}. The quality issue of generated datasets significantly restricts ALM development. Constructing dependable model generation methods is a crucial research direction needing further advancement. Additionally, the vast but noisy audio-related text on the internet, such as audio introductions and comments, remains overlooked.
+
+3) Evaluation Benchmarks and Analysis:
+A unified model evaluation framework is essential for identifying model limitations and advancing the field. While there has been significant progress in ALM research, empirical analysis across a wide range of audio types, tasks, and models remains scarce. This gap is partly due to the limited availability of audio resources, as data used in evaluations should not overlap with the training set. Therefore, we encourage the construction of evaluation benchmarks with broader coverage beyond mainstream audio sources, from other public or private domains, and look forward to extensive empirical analyses based on these benchmarks.
+
+From a model perspective, there are four challenges and potential research directions.
+
+1) Unified multimodal encoder:
+Current ALMs mainly employ two separate networks for processing audio and language modal inputs. In the vision community, there is a proposition that unifying learning on the One Head architecture can enhance communication efficiency across data modalities, improve training efficiency, and alignment \cite{tschannen2022image, jang2023oner}. However, there are relatively few related studies in the field of audio-language \cite{sachidananda2022calm}. Compared to training methods, the model architecture is a more fundamental issue and deserves more effort to explore and improve.
+
+1) Pre-trained Foundation Models:
+Literature has experimentally demonstrated that the choice of pre-trained audio and text encoders is crucial for generating robust representations and improving task performance \cite{deshmukh2022wavtext, wu2023large, mei2024wavcaps}. However, with the rapid development of language models, the primary audio encoders are still pre-trained models such as PANNs \cite{kong2020panns} and AST \cite{gong2021ast}. We acknowledge that the open ALM community lacks a large, well-trained audio encoder to achieve performance improvements in ALM.
+
+3) Continual Learning:
+Existing work highlights the use of larger-scale training data to enhance the pretraining performance of ALMs. However, as streamable data accumulates, pre-training from scratch requires increasingly large storage and computational resources, limiting the continuous growth of models. Moreover, when old data is unavailable, such pretraining from scratch is not permissible. We aspire for models to directly continue learning on new datasets without affecting their performance on old tasks and zero-shot predictions. This method of continual learning for ALMs has yet to be studied.
+
+4) Efficient Learning:
+Compared to the natural language and vision communities, sources of audio are relatively limited, and pre-training ALMs on large-scale training data requires intensive computation, making sustainability a significant issue. We look forward to research on data-efficient ALMs that can train effective models with limited audio-text data. For example, learning not only from each audio-text pair but also utilizing more useful information from supervised learning between paired data \cite{wu2022data}. Also employing active learning or curriculum learning methods are possible to make more efficient use of limited data \cite{wan2023activesurvey}. Moreover, for audio tasks and transfer learning methods are orthogonal, we encourage combining ALMs with more transfer learning methods to explore a better trade-off between parameter-efficient learning and performance.
+
 ## 8·Conclusions: 结论
