--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -498,3 +498,5 @@ Existing work highlights the use of larger-scale training data to enhance the pr
 Compared to the natural language and vision communities, sources of audio are relatively limited, and pre-training ALMs on large-scale training data requires intensive computation, making sustainability a significant issue. We look forward to research on data-efficient ALMs that can train effective models with limited audio-text data. For example, learning not only from each audio-text pair but also utilizing more useful information from supervised learning between paired data \cite{wu2022data}. Also employing active learning or curriculum learning methods are possible to make more efficient use of limited data \cite{wan2023activesurvey}. Moreover, for audio tasks and transfer learning methods are orthogonal, we encourage combining ALMs with more transfer learning methods to explore a better trade-off between parameter-efficient learning and performance.
 
 ## 8·Conclusions: 结论
+
+ALMs can effectively utilize natural language to learn detailed descriptions of audio, achieving zero-shot predictions without any task-specific fine-tuning and demonstrating high performance on fine-tuned audio-centric tasks. Models combined with LLMs exhibit listening, thinking, and reasoning capabilities for complex audio and have achieved significant success in following audio instructions. This survey extensively reviews ALMs for audio tasks from multiple perspectives, including background, foundation, representation pre-training, downstream transfer, training and evaluation data. It abstracts the common characteristics of related work through illustration and formalization, and compares and summarizes mainstream research through tables. The survey covers a wide range of tasks in various audio types such as natural sounds, speech, and music, providing a clear panorama of the latest developments in ALMs. On this basis, we analyze the current challenges in this field and humbly propose potential research directions that we believe could benefit the future development of this emerging but very promising area.
