移除文件夹

--- a/Surveys/2024.11.13__Survey__Direct_Speech-to-Speech_Neural_Machine_Translation_(25P).md
+++ b/Surveys/2024.11.13__Survey__Direct_Speech-to-Speech_Neural_Machine_Translation_(25P).md
@@ -14,7 +14,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](2411.14453v1__Survey__Direct_Speech-to-Speech_Neural_Machine_Translation__A_Survey.pdf)
+  - [ArXiv](2024.11.13__2411.14453v1__Survey__Direct_Speech-to-Speech_Neural_Machine_Translation__A_Survey.pdf)
   - [Publication] #TODO
 
 </details>
