--- a/Surveys/2024.04.30__Survey__Expressivity_&_Speech_Synthesis_(22P).md
+++ b/Surveys/2024.04.30__Survey__Expressivity_&_Speech_Synthesis_(22P).md
@@ -13,7 +13,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](2404.19363v1__Survey__Expressivity_&_Speech_Synthesis.pdf)
+  - [ArXiv](2024.04.30__2404.19363v1__Survey__Expressivity_&_Speech_Synthesis.pdf)
   - [Publication] #TODO
 
 </details>
