更新 Tacotron2 细节

--- a/Models/Acoustic/2017.12.16_Tacotron2.md
+++ b/Models/Acoustic/2017.12.16_Tacotron2.md
@@ -106,7 +106,7 @@ As the authors note, this was simply a placeholder for future neural vocoder app
 
 [^12]: [**Tacotron**: Towards End-to-End Speech Synthesis.](../Acoustic/2017.03.29_Tacotron.md) InterSpeech 2017.
 [^13]: [Sequence-to-Sequence Learning with Neural Networks.](../_Basis/2014.09.10_Seq2Seq.md) 2014.
-[^14]: [Signal Estimation from Modified Short-Time Fourier Transform](../Vocoder/1984.04.00_Griffin-Lim.md)
+[^14]: [**Griffin-Lim**: Signal Estimation from Modified Short-Time Fourier Transform](../Vocoder/1984.04.00_Griffin-Lim.md)
 
 </td>
 </tr>
@@ -294,7 +294,7 @@ Attention probabilities are computed after projecting inputs and location featur
 Location features are computed using 32 1-D convolution filters of length 31.
 
 [^21]: Attention-Based Models for Speech Recognition. NIPS 2015.
-[^22]: Neural Machine Translation by Jointly Learning to Align and Translate. ICLR 2015.
+[^22]: [Neural Machine Translation by Jointly Learning to Align and Translate.](../NMT/2014.09.01_NMT_by_Jointly_Learning_to_Align_&_Translate.md) ICLR 2015.
 
 </td>
 <td>
