--- a/Models/Acoustic/2019.06.04_MelNet.md
+++ b/Models/Acoustic/2019.06.04_MelNet.md
@@ -20,10 +20,21 @@
 
 ## Abstract: 摘要
 
+<table>
+<tr>
+<td width="50%">
+
 Capturing high-level structure in audio waveforms is challenging because a single second of audio spans tens of thousands of timesteps.
 While long-range dependencies are difficult to model directly in the time domain, we show that they can be more tractably modelled in two-dimensional time-frequency representations such as spectrograms.
 By leveraging this representational advantage, in conjunction with a highly expressive probabilistic model and a multiscale generation procedure, we design a model capable of generating high-fidelity audio samples which capture structure at timescales that time-domain models have yet to achieve.
 We apply our model to a variety of audio generation tasks, including unconditional speech generation, music generation, and text-to-speech synthesis---showing improvements over previous approaches in both density estimates and human judgments.
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
 
 ## 1·Introduction: 引言
 
